# ModernCppChallenge

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
chapter1_math_problems/: CMakeLists.txt  common.cpp  p1.cpp  p10.cpp  p2.cpp  p3.cpp  p4.cpp  p5.cpp  p6.cpp  p7.cpp  p8.cpp  p9.cpp
chapter1_math_problems/include/: chapter1.hpp
